plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'jacoco'
}

group = 'org.javaguru'
version = '1.0.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

/**
 * Версии библиотек (аналог <properties>)
 */
ext {
	testcontainersVersion = '1.19.3'
	restAssuredVersion   = '5.4.0'
	assertjVersion       = '3.24.2'
}

dependencies {

	/* =====================================================
     * MAIN DEPENDENCIES
     * ===================================================== */

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.liquibase:liquibase-core'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'com.fasterxml.jackson.core:jackson-databind'


	/* =====================================================
     * TEST DEPENDENCIES
     * ===================================================== */

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

	// --- H2 ---
	testRuntimeOnly 'com.h2database:h2'

	// --- Testcontainers ---
	testImplementation "org.testcontainers:testcontainers:${testcontainersVersion}"
	testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
	testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"

	// --- REST Assured ---
	testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
	testImplementation "io.rest-assured:spring-mock-mvc:${restAssuredVersion}"
	testImplementation "io.rest-assured:json-path:${restAssuredVersion}"

	// --- Assertions ---
	testImplementation "org.assertj:assertj-core:${assertjVersion}"
	testImplementation 'org.hamcrest:hamcrest'

	// --- Async testing ---
	testImplementation 'org.awaitility:awaitility:4.2.0'

	// --- JSON helpers ---
	testImplementation 'com.jayway.jsonpath:json-path'

	// Lombok для test
	testCompileOnly 'org.projectlombok:lombok:1.18.32'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

}


/* =====================================================
 * UNIT TESTS
 * ===================================================== */
test {
	useJUnitPlatform()

	// исключаем интеграционные тесты
	exclude '**/*IT.class'
	exclude '**/integration/**'

	finalizedBy jacocoTestReport
}

/* =====================================================
 * INTEGRATION TESTS (аналог Maven Failsafe)
 * ===================================================== */
tasks.register('integrationTest', Test) {
	description = 'Runs integration tests'
	group = 'verification'

	useJUnitPlatform()

	include '**/*IT.class'
	include '**/integration/**'

	shouldRunAfter test

	systemProperty 'testcontainers.reuse.enable', 'true'
}

check.dependsOn integrationTest

/* =====================================================
 * JACOCO
 * ===================================================== */
jacoco {
	toolVersion = '0.8.11'
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}
}

tasks.register('jacocoIntegrationReport', JacocoReport) {
	dependsOn integrationTest

	executionData integrationTest

	sourceSets sourceSets.main

	reports {
		xml.required = true
		html.required = true
	}
}
